<resources>
    <string name="app_name">s143861 Daniel Styrbæk-Petersen</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_a_fragment">Choose a Fragment</string>
    <string name="start_game">Begynd Spil</string>
    <string name="help">Hjælp</string>
    <string name="high_score">High Score</string>
    <string name="settings">Indstillinger</string>
    <string name="hvem_spiller">Hvem spiller?</string>
    <string name="enter_your_name">Indtast dit navn</string>
    <string name="vaelg_ordliste">Vælg ordliste</string>
    <string name="tilbage">TILBAGE</string>
    <string name="start_spil">Start Spil</string>
    <string name="navn">Navn</string>
    <string name="ord">ORD</string>
    <string name="score">Score</string>
    <string name="galgeleg">Velkommen til galgeleg</string>
    <string name="splash_galge">GALGELEG</string>
    <string name="splash_velkommen">VELKOMMEN</string>
    <string name="splash_til">TIL</string>
</resources>